alignment bug fix + rem values for margin & paddings

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,24 +3,27 @@
 .header-container {
   width: 100%;
   height: 50%;
-  padding: 0 146px;
+  padding: 0 10rem 3rem;
   display: flex;
   justify-content: space-between;
   .header-icon {
-    width: 328px;
-    height: 328px;
+    width: 33.33%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     svg {
-      width: 100%;
-      height: 100%;
+      width: 90%;
+      height: 90%;
     }
   }
   .header-temp-container {
-    width: 448px;
-    margin: 0 142px;
+    width: 33.33%;
+    padding: 0 6rem;
     display: flex;
     flex-direction: column;
   }
-  .header-date-container {
-    flex: 1;
-  }
+  //.header-date-container {
+  //  flex: 1;
+  //}
 }
